Apply take offer